package armas.model.pedido;

public enum StatusPagamento {
    APROVADO,
    PENDENTE,
    CANCELADO
}
