package armas.model.usuario;

public enum Perfil {
    ADMIN,
    CLIENTE
   
}
