package drones.model.pedido;

public enum StatusPedido {

    PENDENTE,
    PAGO,
    CANCELADO
}